# new_project_finance

./: .gitignore  123.py  DEPLOY_INSTRUCTIONS.md  DEVELOPMENT_GUIDE.md  DOCKER_SETUP.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
project_finance_backend/: .dockerignore  .env  Dockerfile  Dockerfile.dev  QUICK_START.md  TELEGRAM_SETUP.md  TUNNEL_ALTERNATIVES.md  TUNNEL_BACKEND_SETUP.md  pyproject.toml
project_finance_backend/alembic/: env.py
project_finance_backend/alembic/versions/: 1b794a48fd55_add_cascade_delete_to_transactions4.py  2e87392c5de5_add_cascade_delete_to_user_id.py  5eae301d7ed1_fix_category_unique_constraint.py  8af56e3f863a_add_cascade_delete_to_user_id.py  9378e17e19c6_initial_clean_migration.py  add_color_and_icon_to_categories.py  e0373696d13f_add_is_admin_to_users.py
project_finance_backend/app/: db.py  main.py
project_finance_backend/app/api/: dependencies.py
project_finance_backend/app/bot/: __init__.py  bot.py  scheduler.py
project_finance_backend/app/bot/handlers/: __init__.py  start.py  voice.py  webapp.py
project_finance_backend/app/core/: config.py  security.py  telegram_verification.py
project_finance_backend/app/crud/: category.py  stats.py  transaction.py  user.py
project_finance_backend/app/models/: __init__.py  category.py  transaction.py  user.py
project_finance_backend/app/routers/: auth.py  categories.py  profile.py  stats.py  telegram.py  transactions.py  users.py
project_finance_backend/app/schemas/: auth.py  categories.py  stats.py  transactions.py  users.py
project_finance_front/: DEBUG.md  (+10 more)
(+37 files in other folders)
